--- a/src/pages/trip-detail/trip-detail.scss
+++ b/src/pages/trip-detail/trip-detail.scss
@@ -1,3 +1,64 @@
 page-trip-detail {
 
+  .result {
+    height: 100%;
+    width: 100%;
+  }
+
+  ion-content {
+    height: 100vh;
+    width: 100vw;
+
+    .flex-container {
+      height: 100%;
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: flex-end;
+      flex-wrap: nowrap;
+
+      @media (min-width: 800px) {
+        flex-direction: row;
+      }
+
+      .search {
+        flex-grow: 0;
+        display: inline-block;
+        box-sizing: border-box;
+
+
+        width: 100%;
+        height: auto;
+        background-color: map_get($colors, 'dark');
+
+        @media (min-width: 800px) {
+          width: 350px;
+          height: 100%;
+        }
+
+        ion-list {
+          margin: 0 auto;
+          max-width: 350px;
+
+          .trip {
+            margin-bottom: 50px;
+          }
+        }
+      }
+
+      .map {
+        flex-grow: 1;
+        display: inline-block;
+        box-sizing: border-box;
+
+        width: 100%;
+        height: 300px;
+
+        @media (min-width: 800px) {
+          margin-left: 0;
+          height: 100%;
+          width: calc(100% - 350px);
+        }
+      }
+    }
+  }
 }
